
Change Log:
----------------------------------------------------------------------

2.0.9.6
----------------------------------------------------------------------
- Fix: When adding new widgets they are not linked anymore (not "clones")
- Fix: In some browsers the "Add sidebar" popup was partially hidden.
- Fix: Sometimes the dropdown list of a multiselect list stayed open.
- Some other small improvements.

2.0.9.5
----------------------------------------------------------------------
- Fix: PHP error "WDev" undefined that appeared in 2.0.9.4

2.0.9.4
----------------------------------------------------------------------
- Fix: For some users the plugin was not loading anymore after updating to 2.0.9.1.

2.0.9.3
----------------------------------------------------------------------
- Fix: Z-index issue in Dashboard where wide widgets where covered by the main-menu.
- Fix: Added compatibility for static front-page sidebars with version 2.0.9

2.0.9.2
----------------------------------------------------------------------
- Fix: Sidebar Locations "Front Page" and "Post Index" now work correctly.

2.0.9.1
----------------------------------------------------------------------
- Fix: Sidebars now support unicode-text in name/description.
- Minor: New debugging output that explains why a sidebar/widget is displayed.

2.0.9
----------------------------------------------------------------------
- Fix: Fixed issue with WP sidebar chooser right after creating a new sidebar.
- Fix: Fixed various issues when flagging a sidebar s replaceable.
- Fix: Plugin will not load in accessibility mode but display a notice instead.
- Minor fix: Make code compatible with PHP 5.2.4
- Minor fix: Slight improvement of ajax stability
- Minor fix: Plugin now requires capability "edit_theme_options"

2.0.8
----------------------------------------------------------------------
- Fix: Fixed issue with settings not being saved correctly.

2.0.7